<resources>
    <string name="app_name">mobileone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signUp">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="welcome">Welcome, Fams!</string>
    <string name="getstarted">GET STARTED</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="guest">Guest</string>
</resources>